add copy and images

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
   </head>
 
   <body>
+    <h1>This is our Zoo</h1>
+    <p>Welcome, look at these critters</p>
 
+    <div class="#">
+      <p>Have you ever seen a sea cow?</p>
+      <img src="photos/manatee.jpeg" alt="manatee">
+    </div>
+    <div class="">
+      <p>What's the cutest nocturnal animal?</p>
+      <img src="photos/bat.jpeg" alt="bat with huge eyes">
+    </div>
+    <div class="">
+      <p>What type of penguin can grow up to 3' tall?</p>
+      <img src="photos/penguin.jpeg" alt="emperor penguin walking somewhere">
+    </div>
   </body>
 </html>
