add jQuery functionality to our images and p

--- a/index.html
+++ b/index.html
@@ -11,17 +11,14 @@
     <h1>This is our Zoo</h1>
     <p>Welcome, look at these critters</p>
 
-    <div class="#">
-      <p>Have you ever seen a sea cow?</p>
-      <img src="photos/manatee.jpeg" alt="manatee">
-    </div>
-    <div class="">
-      <p>What's the cutest nocturnal animal?</p>
-      <img src="photos/bat.jpeg" alt="bat with huge eyes">
-    </div>
-    <div class="">
-      <p>What type of penguin can grow up to 3' tall?</p>
-      <img src="photos/penguin.jpeg" alt="emperor penguin walking somewhere">
-    </div>
+      <p id="manatee-click">Have you ever seen a sea cow?</p>
+        <img id="manatee-show" src="photos/manatee.jpeg" alt="manatee">
+
+      <p id="bat-click">What's the cutest nocturnal animal?</p>
+      <img id="bat-fade" src="photos/bat.jpeg" alt="bat with huge eyes">
+
+      <p id="penguin-click">What type of penguin can grow up to 3' tall?</p>
+      <img id="penguin-slide" src="photos/penguin.jpeg" alt="emperor penguin walking somewhere">
+
   </body>
 </html>
