add color changes

--- a/index.html
+++ b/index.html
@@ -20,5 +20,16 @@
       <p id="penguin-click">What type of penguin can grow up to 3' tall?</p>
       <img id="penguin-slide" src="photos/penguin.jpeg" alt="emperor penguin walking somewhere">
 
+      <button id="black" class="show">Change background</button>
+      <button id="white" class="hide">Change background back</button>
+
+      <h2>This is our webpage that responds</h2>
+      <button id="hi">Hi</button>
+      <h3>User</h3>
+      <ul>
+      </ul>
+      <h3>Webpage</h3>
+      <ul>
+      </ul>
   </body>
 </html>
